# max-torch-backend

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_gpt2.py  run_llama2.py  run_scratch_gpt2.py  run_small_model.py  run_vgg.py  run_vision_model.py  try.py
.github/workflows/: ci.yml
max_torch_backend/: __init__.py  compiler.py  mappings.py  ops.py
pretrained_models/: qwen.py  run_gpt2.py  run_vgg.py
ressources/: aten_ops.txt
tests/: conftest.py  test_aten_functions.py  test_compiler.py  test_unsupported_ops.py  test_vit_base_patch16_224.py
torch_max_backend/: __init__.py  aten_functions.py  compiler.py  mappings.py  testing.py
