[project]
name = "max-torch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modular>=25.4.0",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
]

[[tool.uv.index]]
url = "https://dl.modular.com/public/nightly/python/simple/"
default = true
