[project]
name = "max-torch-backend"
version = "0.1.0"
description = "PyTorch backend implementation using Modular's MAX framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modular>=25.4.0",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
]

[[tool.uv.index]]
url = "https://dl.modular.com/public/nightly/python/simple/"
default = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "UP", # pyupgrade
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
]
