[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "max-torch-backend"
version = "0.1.0"
description = "PyTorch backend implementation using Modular's MAX framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "max",
    "tabulate",
    "torch",
]

[tool.hatch.build.targets.wheel]
packages = ["torch_max_backend"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",  # pyflakes (includes unused imports)
    "UP", # pyupgrade
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "accelerate>=1.10.0",
    "hatchling",
    "ibm-fms>=1.2.1",
    "ipython",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "pytest-forked>=1.6.0",
    "pytest-split>=0.10.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.11.0",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
]

